corrected mistake in app.json nav bar config

--- a/app.json
+++ b/app.json
@@ -29,7 +29,7 @@
       "favicon": "./assets/favicon.png"
     },
     "androidNavigationBar": {
-      "visible": true,
+      "visible": "leanback",
       "barStyle": "dark-content",
       "backgroundColor": "#FFFFFF"
     }
