--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -135,8 +135,9 @@ android {
         applicationId 'com.supervoid.epoch'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 3
-        versionName "1.0.3"
+        multiDexEnabled true
+        versionCode 4
+        versionName "1.1.0"
     }
     splits {
         abi {
@@ -196,6 +197,7 @@ dependencies {
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:0.63.4"  // From node_modules
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
+    implementation 'com.android.support:multidex:2.0.1'
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
       exclude group:'com.facebook.fbjni'
     }
